# yapppart

./: README.md  codebase_switcher.py  greeting.txt  pyproject.toml  pytest.ini  setup.py
giotto-ph/: CMakeLists.txt
giotto-ph/gph/src/: Flag_complex_edge_collapser.h  ripser.h
sample/viz/: zero_partitions_frequency_by_digits.csv
src/: datarunner.sh
src/pppart/: __init__.py  __main__.py  chain_complex.py  core.py  filters.py  spaces.py  stats.py  tda.py  utils.py  zero_analysis.py
src/pppart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pppart/viz/: viz_base_pairs.py  viz_batch_rate.py  viz_ppp_counts.py  viz_tda_stats.py
tests/: test_csv_output.py  test_main_flow_control.py  test_main_functional.py  test_summary_table.py  test_utils_critical.py  test_version_based.py  testgen.sh
tests/hide/: test_visualization_contract.py  test_zero_analysis_contracts.py
